installed request-promise

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Phillip Langland",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "require-promise": "^1.0.1"
   }
 }
